ch13/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
  labels:
    role: api
spec:
  containers:
  - name: api
    image: nginx:1.23
    ports:
    - containerPort: 80
      name: http-api-svc
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    role: api
  ports:
  - name: my-service-port
    protocol: TCP
    port: 80
    targetPort: http-api-svc
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    role: web
spec:
  containers:
  - name: web
    image: nginx:1.23
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  labels:
    role: bad-role
spec:
  containers:
  - name: bad-pod
    image: nginx:1.23
    ports:
    - containerPort: 80
